@@ -281,14 +281,14 @@
       2
     </td>
     <td><b>Download 
-	<a href="http://lilypond.org/download/binaries/Fedora-1/lilypond-2.3.1-1.i386.rpm">lilypond</a>,
+	<a href="http://lilypond.org/download/binaries/Fedora-1/lilypond-2.3.3-1.i386.rpm">lilypond</a>,
 	
 	<a
-	   href="http://lilypond.org/download/binaries/Fedora-1/lilypond-documentation-2.3.1-1.i386.rpm">documentation</a></b>
+	   href="http://lilypond.org/download/binaries/Fedora-1/lilypond-documentation-2.3.3-1.i386.rpm">documentation</a></b>
 
       (<a href="#ec-fonts">NOTE</a>)
     </td>
-    <td>2.3.1</td>
+    <td>2.3.3</td>
     <td><a href="mailto:bug-lilypond@gnu.org">LilyPond development team</a></td>
   </tr>
 
@@ -298,12 +298,12 @@
     <td></td>
     <td><b>Download 
 	<a
-	   href="http://lilypond.org/download/v2.3/lilypond-2.3.2.tar.gz">tarball</a>
+	   href="http://lilypond.org/download/v2.3/lilypond-2.3.3.tar.gz">tarball</a>
 	(<a href="../devel/#warning">warning</a>)
       </b>
     </td>
     <td>
-      2.3.2
+      2.3.3
     </td>
     <td><a href="mailto:bug-lilypond@gnu.org">LilyPond development
 	team</a></td>
