@@ -83,15 +83,6 @@ or head straight to the <a href="download/#2.2">download section</a>.
 	href="download/#2.3">download section</a>.
 	
 	</dd>
-
-	<dt>May 9, 2004</dt>
-	<dd>
-	LilyPond 2.3.1 is out. This release has many new and cool
-	features. Check out the <a
-	href="../doc/v2.3/Documentation/topdocs/out-www/NEWS.html">release
-	notes</a> or head straight to the  
-	<a href="download/#2.3">download section</a>.
-	</dd>      
 	
       </dl>
       <p align="right"><a href="old-news.html">older news...</a></p>
