@@ -1,5 +1,7 @@
 2004-05-31  Han-Wen Nienhuys   <hanwen@xs4all.nl>
 
+	* site/download/index.html: announce 2.3.3
+
 	* site/index.html (href): announce 2.2.2.
 
 2004-05-04  Jan Nieuwenhuizen  <janneke@gnu.org>
